--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Popular Movies</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="movie_title" />
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="movie_backdrop_content_description">Movie backdrop image</string>
+    <string name="movie_rating_denominator">/10</string>
 </resources>
