Add sort by movie popularity vs rating functionality Improve formatting of movie release date in detail fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="title_activity_detail">DetailActivity</string>
     <string name="movie_backdrop_content_description">Movie backdrop image</string>
     <string name="movie_rating_denominator">/10</string>
+    <string name="sort_by_label_popularity">Popularity</string>
+    <string name="sort_by_options">Sort by</string>
+    <string name="sort_by_label_rating">Rating</string>
+    <string name="release_date_label">Release Date:</string>
 </resources>
