--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="sort_by_options">Sort by</string>
     <string name="sort_by_label_rating">Rating</string>
     <string name="release_date_label">Release Date:</string>
+    <string name="reviews_label">Reviews</string>
 </resources>
