--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Popular Movies</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="movie_title" />
     <string name="title_activity_detail">DetailActivity</string>
@@ -9,8 +8,12 @@
     <string name="sort_by_label_popularity">Popularity</string>
     <string name="sort_by_options">Sort by</string>
     <string name="sort_by_label_rating">Rating</string>
-    <string name="release_date_label">Release Date:</string>
-    <string name="reviews_label">Reviews</string>
+    <string name="release_date_label">Release Date</string>
+    <string name="reviews_label">User Reviews</string>
     <string name="video_label">Videos</string>
     <string name="videos_label">Trailers</string>
+    <string name="favorite_button">Favorite</string>
+    <string name="movie_poster_content_description">Movie Poster</string>
+    <string name="movie_rating_label">User Rating</string>
+    <string name="movie_synopsis_label">Synopsis</string>
 </resources>
