--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="no_reviews_available">No user reviews available</string>
     <string name="action_share">Share</string>
     <string name="no_movie_selected_warning">Select a movie!</string>
+    <string name="sort_by_label_favorites">Favorites</string>
 </resources>
